small correction made

--- a/templates/singlepost.html
+++ b/templates/singlepost.html
@@ -4,7 +4,7 @@
     <h1>Blogz!</h1>
     <hr/>
       <div>
-        <a href="/blogz?={{blog.id}}"><h2>{{blog.title}}</h2></a>
+        <a href="/blogz?b={{blog.id}}"><h2>{{blog.title}}</h2></a>
         <p>{{blog.body}}</p>
         <div>written by
           <a href="blogz?user={{blog.owner}}">{{blog.owner}}</div></a>
